sheet-fixes
Attributes give - + code.

Scrollbars fixed on the special tabs to extend the contens and not squish the effects into a small container

--- a/less/global/global.less
+++ b/less/global/global.less
@@ -214,6 +214,12 @@
   background-clip: padding-box;
   overflow: auto;
   position: relative;
+  overflow: visible !important;
+  max-height: none !important;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  
+  &::-webkit-scrollbar { display: none; }
 }
 
 .container__header {
